# oop_gpu_examples

./: .gitignore  CMakeLists.txt
cmake/: compilerOps.cmake
cuda/: CMakeLists.txt
cuda/c_cpp/: CMakeLists.txt
cuda/c_cpp/multiple_c_struct/: CMakeLists.txt  main.cxx
cuda/c_cpp/single_c_struct/: CMakeLists.txt  main.cxx
cuda/c_cpp/struct_with_dynamic_array/: CMakeLists.txt  main.cxx
cuda/c_cpp/struct_with_static_array/: CMakeLists.txt  README.md  main.cxx
openacc/: CMakeLists.txt
openacc/c_cpp/: CMakeLists.txt
openacc/c_cpp/aos_with_dynamic_arrays/: CMakeLists.txt  README.md  main.cxx
openacc/c_cpp/array_of_objects/: CMakeLists.txt  README.md  main.cxx
openacc/c_cpp/multiple_c_struct/: CMakeLists.txt  README.md  main.cxx
openacc/c_cpp/self_instantiation/: CMakeLists.txt  README.md  main.cxx
openacc/c_cpp/self_instantiation_adv/: CMakeLists.txt  README.md  main.cxx
openacc/c_cpp/single_c_struct/: CMakeLists.txt  main.cxx
openacc/c_cpp/struct_with_dynamic_array/: CMakeLists.txt  README.md  main.cxx
openacc/c_cpp/struct_with_static_array/: CMakeLists.txt  main.cxx
openacc/fortran/: CMakeLists.txt
openacc/fortran/multiple_ddt_with_allocatable/: CMakeLists.txt  README.md  main.F90
openacc/fortran/multiple_ddt_with_scalar/: CMakeLists.txt  main.F90
openacc/fortran/self_instantiation/: CMakeLists.txt  README.md  main.F90
openacc/fortran/self_instantiation_adv/: CMakeLists.txt  README.md  main.F90
openacc/fortran/simple_oop_fortran/: CMakeLists.txt  README.md  main.F90
openacc/fortran/single_ddt_with_allocatable/: CMakeLists.txt  README.md  main.F90
openacc/fortran/single_ddt_with_scalar/: CMakeLists.txt  README.md  main.F90
