add_subdirectory(single_c_struct)
add_subdirectory(multiple_c_struct)
add_subdirectory(struct_with_static_array)
add_subdirectory(struct_with_dynamic_array)
add_subdirectory(aos_with_dynamic_arrays)
add_subdirectory(array_of_objects)
add_subdirectory(self_instantiation)
add_subdirectory(self_instantiation_adv)